--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
-DBHOST=fromenvfile
-DBUSER=
-DBNAME=
-DBPASS=
-DBPORT=
+DBHOST=sm-mysql-server
+DBUSER=root
+DBNAME=sm-db
+DBPASS=masukaja
+DBPORT=3306
 
 JWTSECRET=
